Fix rsslog
The PHP was missing and the icons in the popup were too big and breaknig the layout

--- a/source/resource/designs/designglobals.css
+++ b/source/resource/designs/designglobals.css
@@ -488,7 +488,7 @@ button.ui-slider-handle {
   overflow-y: auto;
 }
 
-.popup .main .icon:not(.spinner):not(.rsslogRow) {
+.popup .main > div > .icon:not(.spinner) {
   float: left;
   margin: 0 1em 0 0;
   vertical-align: top;
